--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,7 @@
             </div>
           </a>
         </li>
-        <li class="navigation-list-item active">
+        <li class="navigation-list-item ">
           <a class="navigation-link" href="/">
             <div class="row">
               <div class="col-2">
@@ -46,8 +46,8 @@
             </div>
           </a>
         </li>
-        <li class="navigation-list-item">
-          <a class="navigation-link" href="/">
+        <li class="navigation-list-item" routerLinkActive="active">
+          <a class="navigation-link"  routerLink="contribuyentes" >
             <div class="row">
               <div class="col-2">
                 <i class="fas fa-chart-pie"></i>
