--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,173 +1,192 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<div class="page">
-  <div class="sidebar">
-    <div class="sidebar-header">
-      <div class="sidebar-logo-container">
-        <div class="logo-container">
-          <img class="logo-sidebar" src="assets/img/logo.PNG" />
-        </div>
-        <div class="brand-name-container">
-          <p class="brand-name">
-            IDS administración<br />
-            <span class="brand-subname"> Recaudacion de Ingresos </span>
-          </p>
+<ng-container *ngIf="!authService.isAuthenticated(); else blockLogeado">
+  <router-outlet></router-outlet>
+</ng-container>
+<ng-template #blockLogeado>
+  <link
+    href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+    rel="stylesheet"
+    id="bootstrap-css"
+  />
+  <div class="page">
+    <div class="sidebar">
+      <div class="sidebar-header">
+        <div class="sidebar-logo-container">
+          <div class="logo-container">
+            <img class="logo-sidebar" src="assets/img/logo.PNG" />
+          </div>
+          <div class="brand-name-container">
+            <p class="brand-name">
+              {{ titulo }}<br />
+              <span class="brand-subname">{{ subtitulo }}</span>
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="sidebar-body">
-      <ul class="navigation-list">
-        <li class="navigation-list-item">
-          <a class="navigation-link" href="/">
-            <div class="row">
-              <div class="col-2">
-                <i class="fas fa-tachometer-alt"></i>
+      <div class="sidebar-body">
+        <ul class="navigation-list">
+          <li class="navigation-list-item">
+            <a class="navigation-link" href="/">
+              <div class="row">
+                <div class="col-2">
+                  <i class="fas fa-tachometer-alt"></i>
+                </div>
+                <div class="col-9">Inicio</div>
               </div>
-              <div class="col-9">Inicio</div>
-            </div>
-          </a>
-        </li>
-        <li class="navigation-list-item">
-          <a class="navigation-link" href="/">
-            <div class="row">
-              <div class="col-2">
-                <i class="fas fa-users"></i>
-              </div>
-              <div class="col-9">Cobrar Contribucion</div>
-            </div>
-          </a>
-        </li>
-        <li class="navigation-list-item ">
-          <a class="navigation-link" href="/">
-            <div class="row">
-              <div class="col-2">
-                <i class="fas fa-comments"></i>
-              </div>
-              <div class="col-9">Contribuciones</div>
-            </div>
-          </a>
-        </li>
-        <li class="navigation-list-item" routerLinkActive="active">
-          <a class="navigation-link"  routerLink="contribuyentes" >
-            <div class="row">
-              <div class="col-2">
-                <i class="fas fa-chart-pie"></i>
-              </div>
-              <div class="col-9">Contribuyentes</div>
-            </div>
-          </a>
-        </li>
-        <li class="navigation-list-item">
-          <a class="navigation-link" href="/">
-            <div class="row">
-              <div class="col-2">
-                <i class="fas fa-calendar-alt"></i>
-              </div>
-              <div class="col-9">Empleados</div>
-            </div>
-          </a>
-        </li>
-        <li class="navigation-list-item">
-          <a class="navigation-link" href="/">
-            <div class="row">
-              <div class="col-2">
-                <i class="fas fa-address-book"></i>
-              </div>
-              <div class="col-9">Agregar Palacio</div>
-            </div>
-          </a>
-        </li>
-      </ul>
-      <hr style="color: rgb(255, 255, 255); margin-top: 30px" />
-      <div class="teams-title-container">
-        <p class="teams-title">TEAMS</p>
-      </div>
-      <ul class="teams-list">
-        <li class="teams-item">
-          <div class="row">
-            <div class="col-1">
-              <i
-                class="fas fa-circle"
-                style="color: rgb(255, 92, 160, 0.8)"
-              ></i>
-            </div>
-            <div class="col-9">Marketing</div>
-          </div>
-        </li>
-        <li class="teams-item">
-          <div class="row">
-            <div class="col-1">
-              <i
-                class="fas fa-circle"
-                style="color: rgb(36, 115, 242, 0.8)"
-              ></i>
-            </div>
-            <div class="col-9">Development</div>
-          </div>
-        </li>
-        <li class="teams-item">
-          <div class="row">
-            <div class="col-1">
-              <i
-                class="fas fa-circle"
-                style="color: rgb(51, 242, 105, 0.8)"
-              ></i>
-            </div>
-            <div class="col-9">Webmaster</div>
-          </div>
-        </li>
-        <li class="teams-item">
-          <div class="row">
-            <div class="col-1">
-              <i
-                class="fas fa-circle"
-                style="color: rgb(237, 181, 28, 0.8)"
-              ></i>
-            </div>
-            <div class="col-9">Administration</div>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="content">
-    <nav class="navbar navbar-icon-top navbar-expand-lg navbar-light  minabar">
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-        </ul>
-        <ul class="navbar-nav ">
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i class="fa fa-bell">
-                <span class="badge badge-info">11</span>
-              </i>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i class="fa fa-globe">
-                <span class="badge badge-success">11</span>
-              </i>
+          <li class="navigation-list-item">
+            <a class="navigation-link" href="/">
+              <div class="row">
+                <div class="col-2">
+                  <i class="fas fa-users"></i>
+                </div>
+                <div class="col-9">Cobrar Contribucion</div>
+              </div>
             </a>
           </li>
-          <li class="nav-item dropdown minav-link">
-            <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Oscar Aragon Garcia [Administrador]
+          <li class="navigation-list-item">
+            <a class="navigation-link" href="/">
+              <div class="row">
+                <div class="col-2">
+                  <i class="fas fa-comments"></i>
+                </div>
+                <div class="col-9">Contribuciones</div>
+              </div>
             </a>
-            <ul class="dropdown-menu dropdown-menu-end color-border" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Mi perfil</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i>Cerrar sesion</a></li>
-            </ul>
+          </li>
+          <li class="navigation-list-item" routerLinkActive="active">
+            <a class="navigation-link" routerLink="contribuyentes">
+              <div class="row">
+                <div class="col-2">
+                  <i class="fas fa-chart-pie"></i>
+                </div>
+                <div class="col-9">Contribuyentes</div>
+              </div>
+            </a>
+          </li>
+          <li class="navigation-list-item">
+            <a class="navigation-link" href="/">
+              <div class="row">
+                <div class="col-2">
+                  <i class="fas fa-calendar-alt"></i>
+                </div>
+                <div class="col-9">Empleados</div>
+              </div>
+            </a>
+          </li>
+          <li class="navigation-list-item">
+            <a class="navigation-link" href="/">
+              <div class="row">
+                <div class="col-2">
+                  <i class="fas fa-address-book"></i>
+                </div>
+                <div class="col-9">Agregar Palacio</div>
+              </div>
+            </a>
           </li>
         </ul>
-
+        <hr style="color: rgb(255, 255, 255); margin-top: 30px" />
+        <div class="teams-title-container">
+          <p class="teams-title">TEAMS</p>
+        </div>
+        <ul class="teams-list">
+          <li class="teams-item">
+            <div class="row">
+              <div class="col-1">
+                <i
+                  class="fas fa-circle"
+                  style="color: rgb(255, 92, 160, 0.8)"
+                ></i>
+              </div>
+              <div class="col-9">Marketing</div>
+            </div>
+          </li>
+          <li class="teams-item">
+            <div class="row">
+              <div class="col-1">
+                <i
+                  class="fas fa-circle"
+                  style="color: rgb(36, 115, 242, 0.8)"
+                ></i>
+              </div>
+              <div class="col-9">Development</div>
+            </div>
+          </li>
+          <li class="teams-item">
+            <div class="row">
+              <div class="col-1">
+                <i
+                  class="fas fa-circle"
+                  style="color: rgb(51, 242, 105, 0.8)"
+                ></i>
+              </div>
+              <div class="col-9">Webmaster</div>
+            </div>
+          </li>
+          <li class="teams-item">
+            <div class="row">
+              <div class="col-1">
+                <i
+                  class="fas fa-circle"
+                  style="color: rgb(237, 181, 28, 0.8)"
+                ></i>
+              </div>
+              <div class="col-9">Administration</div>
+            </div>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
 
-    <router-outlet></router-outlet>
-
-    <div></div>
+    <div class="content">
+      <nav class="navbar navbar-icon-top navbar-expand-lg navbar-light minabar">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto"></ul>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <i class="fa fa-bell">
+                  <span class="badge badge-info">11</span>
+                </i>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <i class="fa fa-globe">
+                  <span class="badge badge-success">11</span>
+                </i>
+              </a>
+            </li>
+            <li class="nav-item dropdown minav-link">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Oscar Aragon Garcia [Administrador]
+              </a>
+              <ul
+                class="dropdown-menu dropdown-menu-end color-border"
+                aria-labelledby="navbarDropdown"
+              >
+                <li><a class="dropdown-item" href="#">Mi perfil</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" (click)="logout()"
+                    ><i class="fas fa-sign-out-alt"></i>Cerrar sesion</a
+                  >
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <app-alerts></app-alerts>
+      <router-outlet></router-outlet>
+    </div>
   </div>
-</div>
+</ng-template>
