--- a/src/app/shared/components/contribuyentes/contribuyentes.component.html
+++ b/src/app/shared/components/contribuyentes/contribuyentes.component.html
@@ -39,8 +39,10 @@
         placeholder="buscar contribuyente"
         aria-label="Search"
         name="term"
+        (keyup)="onSearh()"
+        [(ngModel)]="termino"
       />
-      <button class="btn btn-outline-success" type="submit">
+      <button class="btn btn-outline-success"  type="submit">
         <i class="fas fa-search"></i>
       </button>
     </div>
