--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,8 +44,8 @@
               </div>
             </a>
           </li>
-          <li class="navigation-list-item">
-            <a class="navigation-link" href="/">
+          <li class="navigation-list-item" routerLinkActive="active">
+            <a class="navigation-link" routerLink="contribuciones">
               <div class="row">
                 <div class="col-2">
                   <i class="fas fa-comments"></i>
