--- a/src/app/shared/components/contribuciones/contribucion-impuesto/contribucion-impuesto.component.html
+++ b/src/app/shared/components/contribuciones/contribucion-impuesto/contribucion-impuesto.component.html
@@ -1,1 +1,94 @@
-<p>contribucion-impuesto works!</p>
+<div class="container">
+  <div>
+    <span>seleccione una contribución</span>
+  </div>
+  <mat-form-field appearance="fill">
+    <mat-label>Todas las contribuciones</mat-label>
+    <mat-select [formControl]="contribucionControl" [(value)]="selected" >
+      <mat-option>Todas las contribuciones</mat-option>
+      <mat-optgroup *ngFor="let group of contribucionGroups" [label]="group.name"
+                    >
+        <mat-option *ngFor="let contribucion of group.contribucion" [value]="contribucion.value">
+          {{contribucion.viewValue}}
+        </mat-option>
+      </mat-optgroup>
+    </mat-select>
+  </mat-form-field>
+<ng-container *ngIf=" selected===1">
+  <div class="table-wrapper">
+    <div class="alert alert-info my-4 text-center" *ngIf="contribucionesImpuestos!= undefined && contribucionesImpuestos.length==0">
+      no hay ninguna contribucion agregada
+    </div>
+      <table class="table table-bordered table-striped tabla-estilo" *ngIf="contribucionesImpuestos!= undefined && contribucionesImpuestos.length>0">
+        <thead class="cabecera text-white">
+          <tr>
+            <th>Codigo</th>
+            <th>Descripcion</th>
+            <th>Tipo</th>
+            <th>Tipo Pago</th>
+            <th>Cantidad</th>
+            <th
+              class="text-center"
+              *ngIf="
+                authService.hasRole([
+                  'ROLE_ADMIN',
+                  'ROLE_PRESIDENTE',
+                  'ROLE_TESORERO'
+                ])
+              "
+            >
+              <i class="fas fa-pencil-alt"></i>
+            </th>
+            <th class="text-center" *ngIf="authService.hasRole(['ROLE_ADMIN'])">
+              <i class="fas fa-trash-alt"></i>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let contribucion of contribucionesImpuestos">
+            <td>{{ contribucion.codigo_contribucion}}</td>
+            <td>{{contribucion.descripcion}} {{ contribucion.concepto_contribucion}}</td>
+            <td>{{ contribucion.nivelContribucionS}} </td>
+            <td>{{ contribucion.tipo_pago}} </td>
+            <td>{{ contribucion.cantidad}} </td>
+            <td
+              *ngIf="
+                authService.hasRole([
+                  'ROLE_ADMIN',
+                  'ROLE_PRESIDENTE',
+                  'ROLE_TESORERO'
+                ])
+              "
+            >
+              <button
+                type="button"
+                name="editar"
+
+                class="btn btn-primary btn-sm"
+
+              >
+                <i class="fas fa-pencil-alt"></i>
+              </button>
+            </td>
+            <td *ngIf="authService.hasRole(['ROLE_ADMIN'])">
+              <button
+                type="button"
+                name="eliminar"
+                class="btn btn-danger btn-sm"
+
+              >
+                <i class="fas fa-trash-alt"></i>
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+  </div>
+  <div class="container">
+    <app-paginador-impuestos
+      *ngIf="paginador"
+      [paginador]="paginador"
+    ></app-paginador-impuestos>
+  </div>
+</ng-container>
+</div>
