--- a/src/app/shared/components/contribuciones/contribucion-impuesto/contribucion-impuesto.component.html
+++ b/src/app/shared/components/contribuciones/contribucion-impuesto/contribucion-impuesto.component.html
@@ -3,7 +3,7 @@
     <span>seleccione una contribución</span>
   </div>
   <mat-form-field appearance="fill">
-    <mat-label>Todas las contribuciones</mat-label>
+    <mat-label>Impuestos</mat-label>
     <mat-select [formControl]="contribucionControl" [(value)]="selected" >
       <mat-option>Todas las contribuciones</mat-option>
       <mat-optgroup *ngFor="let group of contribucionGroups" [label]="group.name"
