se agregaron los componentes de paginadores

--- a/src/app/shared/components/contribuciones/contribucion-impuesto/contribucion-impuesto.component.html
+++ b/src/app/shared/components/contribuciones/contribucion-impuesto/contribucion-impuesto.component.html
@@ -75,7 +75,7 @@
                 type="button"
                 name="eliminar"
                 class="btn btn-danger btn-sm"
-
+                (click)='eliminarContribucionImpuestos(contribucion)'
               >
                 <i class="fas fa-trash-alt"></i>
               </button>
